--- a/src/app/common/components/filterBox/filterBox.html
+++ b/src/app/common/components/filterBox/filterBox.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default bootstrap-panel xmedium-panel side-filters">
+<div id="filter" class="panel panel-default bootstrap-panel xmedium-panel side-filters">
     <div class="panel-heading panHead">
         <div ng-hide="page.showAddRecord">
             <div class="row" ng-hide="showSearchFilter">
