--- a/src/app/pages/attendance/transaction/verify/editVerify.attendance.html
+++ b/src/app/pages/attendance/transaction/verify/editVerify.attendance.html
@@ -1,4 +1,9 @@
 <div ng-controller="attTranseditverifyController"> 
-<grid-box ng-model="page" >
-</grid-box>
+<!-- <grid-box ng-model="page" >
+</grid-box> -->
+<div class="row">
+    <div class="col-md-12">
+        <div ui-grid="attGridOptions" ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection class="grid" style="height:270px"></div>
+    </div>
+</div>
 </div>
