--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -337,6 +337,10 @@ input:focus, select:foucs {
 .pnl800{
   height: 800px;
 }
+.pnl1800{
+  height: 1000px;
+}
+
 .pnlFixScroll
 {
   overflow-x: scroll;
