--- a/src/app/pages/organization/employees/templates/user/user-view.html
+++ b/src/app/pages/organization/employees/templates/user/user-view.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 User Register/Change Password
-                <button class="btn btn-xs btn-default pull-right" ng-click="goToList()">List</button>
+                <button class="btn btn-xs btn-default pull-right" ng-click="close()">List</button>
             </div>
 
         </div>
