--- a/src/app/common/components/listReport/listReport.html
+++ b/src/app/common/components/listReport/listReport.html
@@ -12,7 +12,7 @@
                             <i ng-show="page.isLoading" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
                         </div>
                         <div class="col-md-9">
-                            <button id="print-button" class="btn btn-xs btn-primary  pull-right" data-toggle="modal" ng-click="callReportPrint();">
+                            <button ng-if="page.gridOptions.data.length>0" class="btn btn-xs btn-default  pull-right" data-toggle="modal" ng-click="callReportPrint();">
                                 Print
                             </button>
                             <button id="reset-button" class="btn btn-xs btn-default  pull-right" data-toggle="modal" ng-click="reset();">
@@ -37,24 +37,31 @@
 
 
 
-                    <div id="listReportViewGrid" ui-grid="page.gridOptions" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning ui-grid-edit
-                        ui-grid-expandable class="djGrid">
+                    <div id="listReportViewGrid" ui-grid="page.gridOptions" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning
+                        ui-grid-edit ui-grid-expandable class="djGrid">
+                        <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
+                        <div class="no-data font-black" ng-if="page.dataIsLoading">
+                            <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
+                        </div>
+                    </div>
+                    <div id="listReportPrintFilter" style="visibility:hidden;font: bold;font-size: medium " ng-repeat="fil in page.filterData">
+
+                        {{fil.displayName}} &nbsp; - &nbsp; {{fil.name}},
+
+                    </div>
+                    <h3 class="with-line "></h3>
+                    <div id="listReportPrintGrid" ng-style="{height: setHeight()}" ui-grid="page.gridOptions2" ui-grid-auto-resize style=" visibility: hidden
+                    ;width: 100%">
                         <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
                         <div class="no-data font-black" ng-if="page.dataIsLoading">
                             <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
                         </div>
                     </div>
 
-                    <div id="listReportPrintGrid" ui-grid="page.gridOptions2" ui-grid-auto-resize style="display: none; visibility: hidden">
-                        <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
-                        <div class="no-data font-black" ng-if="page.dataIsLoading">
-                            <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
-                        </div>
-                    </div>
 
-                    <button id="print-button" class="btn btn-xs btn-primary  pull-right" data-toggle="modal" ng-click="callReportPrint();">
+                    <!-- <button id="print-button" class="btn btn-xs btn-primary  pull-right" data-toggle="modal" ng-click="callReportPrint();">
                         Print
-                    </button>
+                    </button> -->
 
                     <table ng-show="page.reportData.tables.length<=0" class="table table-striped table-bordered table-hover table-sm table-responsive pad0A"
                         ng-if="false">
