--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -9,10 +9,10 @@
         height: 310px;
     }
 </style>
-
+<dashboard-pie-chart></dashboard-pie-chart>
 <div ng-controller="knobCtrl">
     <div ng-show="adminDashboard">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-2 ">
                 <input class="form-control" type="button" class="form-control" value="Show Percentage" ng-click="ShowHide()" />
             </div>
@@ -35,9 +35,9 @@
             </div>
 
 
-        </div>
+        </div> -->
 
-        <div class="row" id="RowCount" ng-hide="IsVisible">
+        <!-- <div class="row" id="RowCount" ng-hide="IsVisible">
             <div class="col-lg-3 ">
                 <ui-knob value="totalActiveEmpValue" options="totalActiveEmp" title="Hello"></ui-knob>
             </div>
@@ -55,7 +55,7 @@
                    
                      <ui-knob value="totalAbsentValuePercentageCount" options="totalAbsentCount" ng-click="listAbsent()" ></ui-knob>
             </div>
-        </div>
+        </div> -->
 
 
 
