--- a/src/app/theme/components/msgCenter/msgCenter.html
+++ b/src/app/theme/components/msgCenter/msgCenter.html
@@ -1,58 +1,69 @@
-<ul  class="al-msg-center clearfix">
-  <li uib-dropdown ng-if="false">
+<ul class="al-msg-center clearfix">
+  <li uib-dropdown>
     <a href uib-dropdown-toggle>
-      <i class="fa fa-bell-o"></i><span>5</span>
+      <i class="fa fa-plus-square"></i>
+      <span ng-if="false">5</span>
 
-      <div class="notification-ring"></div>
+      <div class="notification-ring" ng-if="false"></div>
     </a>
 
     <div uib-dropdown-menu class="top-dropdown-menu">
       <i class="dropdown-arr"></i>
 
       <div class="header clearfix">
-        <strong>Notifications</strong>
-        <a href>Mark All as Read</a>
-        <a href>Settings</a>
+        <strong>Quick Links</strong>
+        <a href>Add Employee</a>
+        <a href>Apply Leave</a>
       </div>
       <div class="msg-list">
+        <a href class="clearfix">
+          <div class="msg-area">
+            <div>Apply Leave</div>
+          </div>
+        </a>
+        <a href class="clearfix">
+            <div class="msg-area">
+              <div>Apply Outduty</div>
+            </div>
+          </a>
         <a href class="clearfix" ng-repeat="msg in notifications">
-          <div class="img-area"><img ng-class="{'photo-msg-item' : !msg.image}" ng-src="{{::( msg.image ||  (users[msg.userId].name | profilePicture) )}}"></div>
+          <div class="img-area">
+            <img ng-class="{'photo-msg-item' : !msg.image}" ng-src="{{::( msg.image ||  (users[msg.userId].name | profilePicture) )}}">
+          </div>
           <div class="msg-area">
             <div ng-bind-html="getMessage(msg)"></div>
             <span>{{ msg.time }}</span>
           </div>
         </a>
       </div>
-      <a href>See all notifications</a>
+      <a href>Settings</a>
     </div>
   </li>
   <li uib-dropdown>
     <a href class="msg" uib-dropdown-toggle>
-      <i class="fa fa-link fa"></i>
-      <div class="notification-ring"></div>
+      <i class="fa fa-envelope-o"></i>
+      <span ng-if="false">5</span>
+      <div class="notification-ring" ng-if="false"></div>
     </a>
     <div uib-dropdown-menu class="top-dropdown-menu">
       <i class="dropdown-arr"></i>
-      <!-- <div class="header clearfix">
+      <div class="header clearfix">
         <strong>Messages</strong>
         <a href>Mark All as Read</a>
         <a href>Settings</a>
-      </div> -->
+      </div>
       <div class="msg-list">
-
-        <a ui-sref="organization.employees.add({action:'create'})">Add Employee</a>
-        <!-- <a ui-sref="attendance.transaction.dailysummary">Daily Attendance</a> -->
-        <a ui-sref="leave.transaction.leaveapplication">Leave Application</a>
-<!--         
         <a href class="clearfix" ng-repeat="msg in messages">
-          <div class="img-area"><img class="photo-msg-item" ng-src="{{::( users[msg.userId].name | profilePicture )}}"></div>
+          <div class="img-area">
+            <img class="photo-msg-item" ng-src="{{::( users[msg.userId].name | profilePicture )}}">
+          </div>
           <div class="msg-area">
             <div>{{ msg.text }}</div>
             <span>{{ msg.time }}</span>
           </div>
         </a>
       </div>
-      <a href>See all messages</a> -->
+      <a href>See all messages</a>
     </div>
   </li>
 </ul>
