--- a/src/sass/theme/components/_msgCenter.scss
+++ b/src/sass/theme/components/_msgCenter.scss
@@ -17,7 +17,7 @@
   float: right;
   padding: 0;
   list-style: none;
-  margin: 13px 47px 0 0;
+  margin: 10px 0px 0 0;
 
   li {
     list-style: none;
@@ -27,15 +27,15 @@
       margin-left: 0;
     }
     & > a {
-      color: $sidebar-text;
+      color: $topBar-text;
       text-decoration: none;
-      font-size: 13px;
+      font-size: 20px;
       position: relative;
       span {
         display: inline-block;
         min-width: 10px;
         padding: 2px 4px 2px 4px;
-        color: $sidebar-text;
+        color: $topBar-text;
         vertical-align: baseline;
         white-space: nowrap;
         text-align: center;
