--- a/src/sass/theme/components/_pageTop.scss
+++ b/src/sass/theme/components/_pageTop.scss
@@ -1,12 +1,28 @@
 .page-top {
-  background-color: $sidebar;
+  background-color: $topBar;
   position: fixed;
   z-index: 904;
   box-shadow: 2px 0px 3px rgba(0, 0, 0, 0.5);
-  height: 66px;
+  height: 40px;
   width: 100%;
   min-width: $resMin;
-  padding: 0 32px 0 40px;
+  padding: 0 32px 0 20px;
+  // background-image: url('../assets/img/theme/side-bg-4.jpg') ;
+
+    background-image: -moz-linear-gradient(top,#2b5dad,#13459a);
+    background-image: -ms-linear-gradient(top,#2b5dad,#13459a);
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(#2b5dad),to(#13459a));
+    background-image: -webkit-linear-gradient(top,#2b5dad,#13459a);
+    background-image: -o-linear-gradient(top,#2b5dad,#13459a);
+    background-image: linear-gradient(top,#2b5dad,#13459a);
+    background-repeat: repeat-x;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#2b5dad',endColorstr='#13459a',GradientType=0);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 -1px 0 rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.25),inset 0 -1px 0 rgba(0,0,0,0.1);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.25), inset 0 -1px 0 rgba(0,0,0,0.1);
 
   &.scrolled {
     background-color: rgba(black, 0.85)
@@ -14,15 +30,15 @@
 }
 
 a.al-logo {
-  color: $sidebar-text;
+  color: $topBar-text;
   display: block;
-  font-size: 24px;
+  font-size: 18px;
   font-family: $font-family;
   white-space: nowrap;
   float: left;
   outline: none !important;
-  line-height: 60px;
-
+  line-height: 40px;
+  // margin-left: 10px;
   span {
     color: $primary;
   }
@@ -30,7 +46,7 @@ a.al-logo {
 
 .user-profile {
   float: right;
-  min-width: 250px;
+  min-width: 80px;
   margin-top: 10px;
 }
 
@@ -53,14 +69,14 @@ a.al-logo {
     display: block;
   }
   img {
-    width: 45px;
-    height: 45px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
   }
 }
 
 a.refresh-data {
-  color: $sidebar-text;
+  color: $topBar-text;
   font-size: 13px;
   text-decoration: none;
   font-weight: $font-normal;
@@ -74,15 +90,15 @@ a.refresh-data {
 }
 
 a.collapse-menu-link {
-  font-size: 31px;
+  font-size: 24px;
   cursor: pointer;
   display: block;
   text-decoration: none;
-  line-height: 42px;
-  color: $sidebar-text;
+  line-height: 40px;
+  color: $topBar-text;
   padding: 0;
   float: left;
-  margin: 11px 0 0 25px;
+  margin: 0 10 0 0px;
 
   &:hover {
     text-decoration: none;
@@ -112,7 +128,7 @@ a.collapse-menu-link {
 
 .search {
   text-shadow: none;
-  color: $sidebar-text;
+  color: $topBar-text;
   font-size: 13px;
   line-height: 25px;
   transition: all 0.5s ease;
@@ -120,7 +136,7 @@ a.collapse-menu-link {
   overflow: hidden;
   width: 500px;
   float: left;
-  margin: 20px 0 0 30px;
+  margin: 10px 0 0 30px;
 
   label {
     cursor: pointer;
@@ -131,7 +147,6 @@ a.collapse-menu-link {
     cursor: pointer;
     padding-left: 1px;
     font-size: 16px;
-    margin-right: 13px;
   }
   input {
     background: none;
