--- a/src/sass/theme/conf/colorScheme/_blur.scss
+++ b/src/sass/theme/conf/colorScheme/_blur.scss
@@ -11,6 +11,7 @@ $border-light: rgba(#ffffff, 0.2);
 $input-border: transparent;
 $input-background: rgba(#000000, 0.15);
 
+$topBar:#a5a5a5;
 $sidebar: rgba(#000000, 0.5);
 $sidebar-text: #ffffff;
 $dropdown-text: #7d7d7d;
