--- a/src/app/pages/selfattendance/attendance.html
+++ b/src/app/pages/selfattendance/attendance.html
@@ -1,1 +1,3 @@
-<h1>Attendance</h1>
+<div class="col-lg-12" ba-panel ba-panel-title="Calendar" ba-panel-class="xmedium-panel feed-comply-panel with-scroll calendar-panel">
+    <dashboard-calendar></dashboard-calendar>
+</div>
