--- a/src/app/theme/components/pageTop/pageTop.html
+++ b/src/app/theme/components/pageTop/pageTop.html
@@ -2,7 +2,8 @@
   
   
   <a href="#/dashboard" class="al-logo clearfix">
-    <span>go</span>HR</a>
+    <div></div>
+  </a>
     <a href class="collapse-menu-link ion-navicon" ba-sidebar-toggle-menu></a>
   <div class="search">
     <!-- <i class="ion-ios-search-strong" ng-click="startSearch()"></i>
