--- a/src/sass/theme/conf/colorScheme/_mint.scss
+++ b/src/sass/theme/conf/colorScheme/_mint.scss
@@ -12,9 +12,10 @@ $input-border: shade($border, 5%);
 $input-background: #ffffff;
 
 $topBar:#2153a5;
-$topBar-text:#ffffff;
+$topBar-text:#000000;
 $sidebar: #1b1b1b;
 $sidebar-text: #ffffff; 
+$msgBar-text:#000000;
 $dropdown-text: #7d7d7d;
 $bootstrap-panel-text: #7d7d7d;
 $bootstrap-panel-bg: #ffffff;
