--- a/src/sass/theme/components/_contentTop.scss
+++ b/src/sass/theme/components/_contentTop.scss
@@ -1,6 +1,6 @@
 .content-top {
-  padding-top: 13px;
-  padding-bottom: 27px;
+  padding-top: 0px;
+  // padding-bottom: 27px;
 }
 
 h1.al-title {
@@ -21,7 +21,7 @@ h1.al-title {
   padding: 0;
   margin: 0;
   float: right;
-  padding-top: 11px;
+  // padding-top: 11px;
   li {
     font-size: 18px;
     font-weight: $font-normal;
@@ -31,7 +31,7 @@ h1.al-title {
 .al-look {
   float: right;
   margin-right: 10px;
-  padding-top: 10px;
+  // padding-top: 10px;
   > a {
     font-size: 19px;
   }
